# scitokens-heroku

./: .dev.vars.example  .gitignore  Gruntfile.js  README.md  app.py  dev_server.py  index.html  jwtRS256.key  jwtRS256.key.pub  package-lock.json  package.json  pyproject.toml  requirements.txt  scitokens_protect.py  tailwind.config.js  testTokenLocal.py  wrangler.jsonc
.claude/: launch.json
.github/workflows/: ci.yml  deploy.yml
css/: app.css
device-code/: index.html
html/: index.jade
introduction/: index.html
js/: app.js
public/: app.css  index.html
public/device-code/: index.html
src/: badgr.py  entry.py  tokens.py
styles/: input.css
stylus/: app.styl
views/: device-code.jade  index.jade  layout.jade
views/libraries/: scitokens-cpp.jade  scitokens-java.jade  scitokens-python.jade
