[project]
name = "scitokens-demo"
version = "0.1.0"
description = "SciTokens demo issuer/debugger backend (Cloudflare Python Worker)"
requires-python = ">=3.12"
dependencies = [
    # cryptography is provided by the Pyodide runtime; scitokens + PyJWT are
    # pure Python and get vendored with the Worker on deploy.
    "scitokens",
    "PyJWT",
    "cryptography",
]

[dependency-groups]
dev = [
    "workers-py",
    "workers-runtime-sdk",
]
